# expectify

./: .gitattributes  .gitignore  README.md  hatch.toml  pyproject.toml
examples/: custom.py  testing.py
src/expectify/: __init__.py  expect.py  expectation.py
src/expectify/matchers/: __init__.py
src/expectify/matchers/built-in/: equal.py
src/expectify/matchers/built_in/: __init__.py  equal.py
src/expectify/matchers/standard/: __init__.py  be_false.py  be_true.py  equal.py
tests/: test_equal.py  test_expect.py
