[project]
name = "expectify"
version = "0.1.0"
authors = [{ name = "Jeff Nyman", email = "jeffnyman@gmail.com" }]
description = "Expressive API to express expected outcomes for tests"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jeffnyman/expectify"
Issues = "https://github.com/jeffnyman/expectify/issues"
