[project]
name = "expectify"
version = "0.1.0"
authors = [{ name = "Jeff Nyman", email = "jeffnyman@gmail.com" }]
description = "Express expected outcomes for tests with expectations API."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["test", "testing", "expectations"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jeffnyman/expectify"
Issues = "https://github.com/jeffnyman/expectify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
